app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require bootstrap_and_overrides
 *= require jokes
 *= require_self
 * require_tree .
 */
#footer{
  font: 12px/1.5 Tahoma,Arial,"宋体b8b\4f53",sans-serif;
  color: #999;
  /*text-align: center;*/
  margin-top: 20px;

  li{
    list-style: none;
  }
  .footer-container{
    /*text-align: center;*/
    padding-top: 20px;
  }
  .weixin_mp{
    width: 120px;
    height: 120px;
  }
}

/* Footer
-------------------------------------------------- */

.footer {
  /*text-align: center;*/
  padding: 30px 0;
  margin-top: 70px;
  border-top: 1px solid #e5e5e5;
  background-color: #252525;
  width: 100%;
}
.footer p {
  margin-bottom: 0;
  color: #777;
}
.footer-links {
  margin: 10px 0;
}
.footer-links li {
  display: inline;
  padding: 0 2px;
}
.footer-links li:first-child {
  padding-left: 0;
}

/*baidu share wixin share*/
#bdshare_weixin_qrcode_dialog table{width: 205px;}

